--- a/frontend/src/Pages/Register/register.css
+++ b/frontend/src/Pages/Register/register.css
@@ -1,22 +1,21 @@
-.Login{
+.register{
     height: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
-.Login h1{
+.register h1{
     text-align: center;
 }
-.Login form{
-    box-shadow: 0 5px 5px #00000008;
-    background-color: white;
+.register form{
     padding: 20px;
     width: 100%;
     max-width: 300px;
     display: flex;
     flex-direction: column;
 }
-.Login form input {
+.register form input {
     margin-top: 20px;
     border: 1px solid #ddd;
     border-radius: 4px;
@@ -25,10 +24,10 @@
     font-size: 16px;
     color: #666;
 }
-.Login form input::placeholder{
+.register form input::placeholder{
     color: #999;
 }
-.Login form button {
+.register form button {
     margin-top: 10px;
     border: 0;
     border-radius: 4px;
@@ -38,4 +37,24 @@
     font-weight: bold;
     color: white;
     cursor: pointer;
+}
+.buttons {
+    width: 100%;
+    max-width: 300px;
+    display: flex;
+    justify-content: space-between;
+}
+.register .buttons a{
+    background-color: #fff;
+    box-shadow: 0 5px 5px #00000008;
+    padding: 5px;
+    text-decoration: none;
+    color: #707070;
+    margin-top: 15px;
+    float: right;
+}
+.register .buttons a, .register form{
+    background-color: #fff;
+    box-shadow: 0 5px 5px #00000008;
+    border-radius: 5px;
 }
