--- a/frontend/src/Pages/Register/register.css
+++ b/frontend/src/Pages/Register/register.css
@@ -14,7 +14,9 @@
     max-width: 300px;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
+form button, input{width: 100%;}
 .register form input {
     margin-top: 20px;
     border: 1px solid #ddd;
